--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "private": true,
   "dependencies": {
+    "classnames": "^2.3.1",
+    "fuse.js": "^3.6.1",
+    "glossary-content": "https://github.com/webdoky/glossary-content.git#main",
+    "lodash": "^4.17.21",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,6 +21,7 @@
     "start": "serve out"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
     "autoprefixer": "^10.4.2",
