--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
     "classnames": "^2.3.1",
     "fuse.js": "^3.6.1",
     "glossary-content": "https://github.com/webdoky/glossary-content.git#main",
+    "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "serve": "11.2.0"
+    "rehype-stringify": "^9.0.3",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "serve": "11.2.0",
+    "unified": "^10.1.1"
   },
   "scripts": {
     "dev": "next",
